# fangorn

./: .env.example  .gitignore  CONTRACT_MIGRATION.md  HEADER.txt  README.md  checkpoint_guide_1.md  data.json  deploy.ts  env.example  eslint.config.js  facilitator_design.md  lit_proposal.md  package.json  pnpm-lock.yaml  publish.sh  schema.json  schemaOutput.txt  storage.md  tsconfig.json  tsconfig.test.json  update_cli.sh  vitest.config.ts  vitest.e2e.config.ts
.fangorn/: HEAD  config.json
cache/: solidity-files-cache.json
circuits/: build_hash_funcs.sh
circuits/poseiden1_hash/: Nargo.toml
circuits/poseiden2_hash/: Nargo.toml  README.md
circuits/preimage/: Nargo.toml  Prover.toml  README.md  build.sh
circuits/recursive_verifier/: Nargo.toml
circuits/sum3-circuit/: README.md
contracts/: README.md  ZKGate.sol  foundry.toml
contracts/arbitrum/: README.md
contracts/arbitrum/DatasourceRegistry/: Cargo.toml  README.md  abi
contracts/arbitrum/DatasourceRegistry/src/: lib.rs  main.rs
contracts/arbitrum/DatasourceRegistry/test/: tests.rs
contracts/arbitrum/SchemaRegistry/: Cargo.toml  abi
contracts/arbitrum/SchemaRegistry/src/: lib.rs  main.rs
contracts/arbitrum/erc20/: Cargo.toml  README.md
contracts/arbitrum/erc20/src/: lib.rs  main.rs
contracts/cache/: solidity-files-cache.json  test-failures
contracts/src/: ContentRegistry.sol  DSRegistry.sol  SettlementTracker.sol  ZKGate.sol
contracts/test/: ZKGate.t.sol
docs/: BUNDLE_CHUNKING.md  CROSS_PUBLISHER_LINKING.md  CROSS_PUBLISHER_LINKING_PLAN.md  DATASOURCE_GIT_MODEL.md  FRAMEWORK.md  GIT_NATIVE_ACCESS_CONTROL.md  GIT_NATIVE_DATA_MODEL.md  GIT_NATIVE_IMPLEMENTATION_PLAN.md  GIT_NATIVE_PRIOR_ART.md  GIT_NATIVE_REDESIGN.md  HOW_IT_WORKS.md  PROTOCOL.md  TESTING.md  encryption.md  guide.md
docs/objects/: README.md
examples/: sealed-e2e.README.md  sealed-e2e.ts
incubator/: architecture.md  build-graph.md  capabilities.md  launch.md  opportunity-matrix.md  spec.md
src/: cli.ts  config.ts  decrypt.ts  deployContract.ts  e2e.test.ts  encrypt.ts  fangorn.ts  generateInputs.ts  index.ts  old_fangorn.ts  uploadToIpfs.ts  zkExample.test.ts  zkExample.ts
src/cli/: cli.ts  (+2 more)
(+141 files in other folders)
